bin_PROGRAMS = kwestkingdom
kwestkingdom_CPPFLAGS = -Wall -DPKGDATADIR='"$(pkgdatadir)"'

kwestkingdom_SOURCES = \
  src/Archer.cpp \
  src/Archer.h \
  src/Arrow.cpp \
  src/Arrow.h \
  src/Bow.cpp \
  src/Bow.h \
  src/Character.cpp \
  src/Character.h \
  src/Chomper.cpp \
  src/Chomper.h \
  src/EndlessWorld.cpp \
  src/EndlessWorld.h \
  src/Enemy.cpp \
  src/Enemy.h \
  src/Game.cpp \
  src/Game.h \
  src/Giant.cpp \
  src/Giant.h \
  src/Hammer.cpp \
  src/Hammer.h \
  src/Heart.cpp \
  src/Heart.h \
  src/HelpTile.cpp \
  src/HelpTile.h \
  src/Hero.cpp \
  src/Hero.h \
  src/Item.h \
  src/KwestKingdom.cpp \
  src/KwestKingdom.h \
  src/MoneyBag.cpp \
  src/MoneyBag.h \
  src/Ninja.cpp \
  src/Ninja.h \
  src/Room.cpp \
  src/Room.h \
  src/RoomFactory.cpp \
  src/RoomFactory.h \
  src/Shield.cpp \
  src/Shield.h \
  src/Snapshot.cpp \
  src/Snapshot.h \
  src/Sprite.cpp \
  src/Sprite.h \
  src/StoryWorld.cpp \
  src/StoryWorld.h \
  src/Sword.cpp \
  src/Sword.h \
  src/World.cpp \
  src/World.h \
  src/al_screen.c \
  src/al_screen.h \
  src/allegro_icon.c \
  src/anim.c \
  src/anim.h \
  src/highscore.c \
  src/highscore.h \
  src/key_input.c \
  src/key_input.h \
  src/memory.c \
  src/memory.h \
  src/resources.c \
  src/resources.h \
  src/screen.c \
  src/screen.h \
  src/text.c \
  src/text.h \
  src/utilities.c \
  src/utilities.h

imagesdatadir = $(pkgdatadir)/images
dist_imagesdata_DATA = \
  data/images/archer_1.bmp \
  data/images/archer_2.bmp \
  data/images/archer_3.bmp \
  data/images/arrow.bmp \
  data/images/bow_draw_1.bmp \
  data/images/bow_draw_2.bmp \
  data/images/bow_draw_3.bmp \
  data/images/bow_hold_1.bmp \
  data/images/bow_hold_2.bmp \
  data/images/bow_hold_3.bmp \
  data/images/bow_hold_4.bmp \
  data/images/chomper_bite_1.bmp \
  data/images/chomper_bite_2.bmp \
  data/images/chomper_bite_3.bmp \
  data/images/chomper_bite_4.bmp \
  data/images/chomper_bite_5.bmp \
  data/images/chomper_stand_1.bmp \
  data/images/chomper_stand_2.bmp \
  data/images/chomper_stand_3.bmp \
  data/images/emptyheart.bmp \
  data/images/gameover.bmp \
  data/images/giant_1.bmp \
  data/images/giant_2.bmp \
  data/images/giant_3.bmp \
  data/images/hammer_hold_1.bmp \
  data/images/hammer_hold_2.bmp \
  data/images/hammer_hold_3.bmp \
  data/images/hammer_hold_4.bmp \
  data/images/hammer_swing_1.bmp \
  data/images/hammer_swing_2.bmp \
  data/images/hammer_swing_3.bmp \
  data/images/hammer_swing_4.bmp \
  data/images/heart.bmp \
  data/images/help.bmp \
  data/images/hero_attack_1.bmp \
  data/images/hero_attack_2.bmp \
  data/images/hero_attack_3.bmp \
  data/images/hero_attack_4.bmp \
  data/images/hero_die_1.bmp \
  data/images/hero_die_2.bmp \
  data/images/hero_die_3.bmp \
  data/images/hero_die_4.bmp \
  data/images/hero_die_5.bmp \
  data/images/hero_hurt_1.bmp \
  data/images/hero_hurt_2.bmp \
  data/images/hero_hurt_3.bmp \
  data/images/hero_hurt_4.bmp \
  data/images/hero_stand_1.bmp \
  data/images/hero_stand_2.bmp \
  data/images/hero_stand_3.bmp \
  data/images/moneybag.bmp \
  data/images/ninja_1.bmp \
  data/images/ninja_2.bmp \
  data/images/ninja_3.bmp \
  data/images/palette.bmp \
  data/images/shield_1.bmp \
  data/images/shield_2.bmp \
  data/images/shield_3.bmp \
  data/images/shield_4.bmp \
  data/images/shore_grass.bmp \
  data/images/shore_grass_insidecorner.bmp \
  data/images/shore_grass_outsidecorner.bmp \
  data/images/shore_snow.bmp \
  data/images/shore_snow_insidecorner.bmp \
  data/images/shore_snow_outsidecorner.bmp \
  data/images/sword_hold_1.bmp \
  data/images/sword_hold_2.bmp \
  data/images/sword_hold_3.bmp \
  data/images/sword_hold_4.bmp \
  data/images/sword_stab_1.bmp \
  data/images/sword_stab_2.bmp \
  data/images/sword_stab_3.bmp \
  data/images/sword_stab_4.bmp \
  data/images/terrain_dirt.bmp \
  data/images/terrain_downstairs.bmp \
  data/images/terrain_evergreen.bmp \
  data/images/terrain_grass.bmp \
  data/images/terrain_ice.bmp \
  data/images/terrain_oak.bmp \
  data/images/terrain_path.bmp \
  data/images/terrain_snow.bmp \
  data/images/terrain_spire.bmp \
  data/images/terrain_upstairs.bmp \
  data/images/terrain_water.bmp \
  data/images/title.bmp

soundsdatadir = $(pkgdatadir)/sounds
dist_soundsdata_DATA = \
  data/sounds/arrow_fly.wav \
  data/sounds/arrow_hit.wav \
  data/sounds/chomp.wav \
  data/sounds/gasp.wav \
  data/sounds/hammer.wav \
  data/sounds/heart.wav \
  data/sounds/money.wav \
  data/sounds/sword.wav

EXTRA_DIST = \
  system/kwestkingdom.desktop \
  system/kwestkingdom.png
