# The name of the program to be compiled.
# The "bin" prefix will install it in the "bin" directory.
# The "PROGRAMS" suffix marks it as a program to be compiled.
bin_PROGRAMS = kwestkingdom

# A list of all of the source code files.
# The "SOURCES" suffix marks it as source code.
kwestkingdom_SOURCES = \
  al_screen.h \
  al_screen.cpp \
  allegro_icon.cpp \
  Animation.h \
  Animation.cpp \
  Archer.h \
  Archer.cpp \
  Arrow.h \
  Arrow.cpp \
  Bow.h \
  Bow.cpp \
  Character.h \
  Character.cpp \
  Chomper.h \
  Chomper.cpp \
  EndlessWorld.h \
  EndlessWorld.cpp \
  Enemy.h \
  Enemy.cpp \
  ForestRoom.h \
  ForestRoom.cpp \
  Game.h \
  Game.cpp \
  Giant.h \
  Giant.cpp \
  Hammer.h \
  Hammer.cpp \
  Heart.h \
  Heart.cpp \
  HelpTile.h \
  HelpTile.cpp \
  Hero.h \
  Hero.cpp \
  HighScoreLibrary.h \
  HighScoreLibrary.cpp \
  KeyControl.h \
  KeyControl.cpp \
  KwestKingdom.h \
  KwestKingdom.cpp \
  List.h \
  List.cpp \
  Map.h \
  Map.cpp \
  MoneyBag.h \
  MoneyBag.cpp \
  Ninja.h \
  Ninja.cpp \
  Resources.h \
  Resources.cpp \
  RoomFactory.h \
  RoomFactory.cpp \
  Room.h \
  Room.cpp \
  Screen.h \
  Screen.cpp \
  Shield.h \
  Shield.cpp \
  Snapshot.h \
  Snapshot.cpp \
  SnowRoom.h \
  SnowRoom.cpp \
  Sprite.h \
  Sprite.cpp \
  StoryWorld.h \
  StoryWorld.cpp \
  Sword.h \
  Sword.cpp \
  Text.h \
  Text.cpp \
  UndergroundRoom.h \
  UndergroundRoom.cpp \
  World.h \
  World.cpp

# This provides the compiler with a variable that points to the
# location of the data files.
# NOTE: "CPP" stands for "C Pre-Processor".
kwestkingdom_CPPFLAGS = -DPKGDATADIR='"$(pkgdatadir)"'
