# The name of the program to be compiled.
# The "bin" prefix will install it in the "bin" directory.
# The "PROGRAMS" suffix marks it as a program to be compiled.
bin_PROGRAMS = kwestkingdom

# A list of all of the source code files.
# The "SOURCES" suffix marks it as source code.
kwestkingdom_SOURCES = \
  al_screen.h \
  al_screen.c \
  allegro_icon.c \
  Animation.h \
  Animation.cpp \
  Archer.h \
  Archer.cpp \
  Arrow.h \
  Arrow.cpp \
  Bow.h \
  Bow.cpp \
  Character.h \
  Character.cpp \
  Chomper.h \
  Chomper.cpp \
  EndlessWorld.h \
  EndlessWorld.cpp \
  Enemy.h \
  Enemy.cpp \
  ForestRoom.h \
  ForestRoom.cpp \
  Game.h \
  Game.cpp \
  Giant.h \
  Giant.cpp \
  Hammer.h \
  Hammer.cpp \
  Heart.h \
  Heart.cpp \
  HelpTile.h \
  HelpTile.cpp \
  Hero.h \
  Hero.cpp \
  highscore.h \
  highscore.c \
  key_input.h \
  key_input.c \
  KwestKingdom.h \
  KwestKingdom.cpp \
  List.h \
  List.cpp \
  Map.h \
  Map.cpp \
  memory.h \
  memory.c \
  MoneyBag.h \
  MoneyBag.cpp \
  Ninja.h \
  Ninja.cpp \
  resources.h \
  resources.c \
  RoomFactory.h \
  RoomFactory.cpp \
  Room.h \
  Room.cpp \
  screen.h \
  screen.c \
  Shield.h \
  Shield.cpp \
  simclist.h \
  simclist.c \
  Snapshot.h \
  Snapshot.cpp \
  SnowRoom.h \
  SnowRoom.cpp \
  Sprite.h \
  Sprite.cpp \
  StoryWorld.h \
  StoryWorld.cpp \
  Sword.h \
  Sword.cpp \
  text.h \
  text.c \
  UndergroundRoom.h \
  UndergroundRoom.cpp \
  utilities.h \
  utilities.c \
  World.h \
  World.cpp

# This provides the compiler with a variable that points to the
# location of the data files.
# NOTE: "CPP" stands for "C Pre-Processor".
kwestkingdom_CPPFLAGS = -DPKGDATADIR='"$(pkgdatadir)"'
