# The name of the program to be compiled.
# The "bin" prefix will install it in the "bin" directory.
# The "PROGRAMS" suffix marks it as a program to be compiled.
bin_PROGRAMS = kwestkingdom

# A list of all of the source code files.
# The "SOURCES" suffix marks it as source code.
kwestkingdom_SOURCES = \
  allegro_icon.c \
  al_screen.c \
  al_screen.h \
  anim.c \
  anim.h \
  Archer.cpp \
  Archer.h \
  Arrow.cpp \
  Arrow.h \
  Bow.cpp \
  Bow.h \
  Character.cpp \
  Character.h \
  Chomper.cpp \
  Chomper.h \
  EndlessWorld.cpp \
  EndlessWorld.h \
  Enemy.cpp \
  Enemy.h \
  Game.cpp \
  Game.h \
  Giant.cpp \
  Giant.h \
  Hammer.cpp \
  Hammer.h \
  Heart.cpp \
  Heart.h \
  HelpTile.cpp \
  HelpTile.h \
  Hero.cpp \
  Hero.h \
  highscore.c \
  highscore.h \
  Item.h \
  key_input.c \
  key_input.h \
  KwestKingdom.cpp \
  KwestKingdom.h \
  memory.c \
  memory.h \
  MoneyBag.cpp \
  MoneyBag.h \
  Ninja.cpp \
  Ninja.h \
  resources.c \
  resources.h \
  Room.cpp \
  RoomFactory.cpp \
  RoomFactory.h \
  Room.h \
  screen.c \
  screen.h \
  Shield.cpp \
  Shield.h \
  Snapshot.cpp \
  Snapshot.h \
  Sprite.cpp \
  Sprite.h \
  StoryWorld.cpp \
  StoryWorld.h \
  Sword.cpp \
  Sword.h \
  text.c \
  text.h \
  utilities.c \
  utilities.h \
  World.cpp \
  World.h

# This provides the compiler with a variable that points to the
# location of the data files.
# NOTE: "CPP" stands for "C Pre-Processor".
kwestkingdom_CPPFLAGS = -DPKGDATADIR='"$(pkgdatadir)"'
