# The "dir" suffix marks this as a directory variable.
imagesdatadir = $(pkgdatadir)/images

# The "dist" prefix will ensure that these files are
# kept in the distribution release of the package.
# The "DATA" suffix marks this as data files for
# the package.
dist_imagesdata_DATA = \
  archer_1.bmp \
  archer_2.bmp \
  archer_3.bmp \
  arrow.bmp \
  bow_draw_1.bmp \
  bow_draw_2.bmp \
  bow_draw_3.bmp \
  bow_hold_1.bmp \
  bow_hold_2.bmp \
  bow_hold_3.bmp \
  bow_hold_4.bmp \
  chomper_bite_1.bmp \
  chomper_bite_2.bmp \
  chomper_bite_3.bmp \
  chomper_bite_4.bmp \
  chomper_bite_5.bmp \
  chomper_stand_1.bmp \
  chomper_stand_2.bmp \
  chomper_stand_3.bmp \
  emptyheart.bmp \
  gameover.bmp \
  giant_1.bmp \
  giant_2.bmp \
  giant_3.bmp \
  hammer_hold_1.bmp \
  hammer_hold_2.bmp \
  hammer_hold_3.bmp \
  hammer_hold_4.bmp \
  hammer_swing_1.bmp \
  hammer_swing_2.bmp \
  hammer_swing_3.bmp \
  hammer_swing_4.bmp \
  heart.bmp \
  help.bmp \
  hero_attack_1.bmp \
  hero_attack_2.bmp \
  hero_attack_3.bmp \
  hero_attack_4.bmp \
  hero_die_1.bmp \
  hero_die_2.bmp \
  hero_die_3.bmp \
  hero_die_4.bmp \
  hero_die_5.bmp \
  hero_hurt_1.bmp \
  hero_hurt_2.bmp \
  hero_hurt_3.bmp \
  hero_hurt_4.bmp \
  hero_stand_1.bmp \
  hero_stand_2.bmp \
  hero_stand_3.bmp \
  moneybag.bmp \
  ninja_1.bmp \
  ninja_2.bmp \
  ninja_3.bmp \
  palette.bmp \
  shield_1.bmp \
  shield_2.bmp \
  shield_3.bmp \
  shield_4.bmp \
  shore_grass.bmp \
  shore_grass_insidecorner.bmp \
  shore_grass_outsidecorner.bmp \
  shore_snow.bmp \
  shore_snow_insidecorner.bmp \
  shore_snow_outsidecorner.bmp \
  sword_hold_1.bmp \
  sword_hold_2.bmp \
  sword_hold_3.bmp \
  sword_hold_4.bmp \
  sword_stab_1.bmp \
  sword_stab_2.bmp \
  sword_stab_3.bmp \
  sword_stab_4.bmp \
  terrain_dirt.bmp \
  terrain_downstairs.bmp \
  terrain_evergreen.bmp \
  terrain_grass.bmp \
  terrain_ice.bmp \
  terrain_oak.bmp \
  terrain_path.bmp \
  terrain_snow.bmp \
  terrain_spire.bmp \
  terrain_upstairs.bmp \
  terrain_water.bmp \
  title.bmp
